# freeswitch

./: Makefile.am  bootstrap.sh  configure.in
debian/: changelog  control  copyright  freeswitch-dbg.lintian-overrides  freeswitch.dirs  freeswitch.docs  freeswitch.install  freeswitch.lintian-overrides  freeswitch.logrotate  freeswitch.postinst  freeswitch.postrm  freeswitch.upstart  libfreeswitch-dev.install  libfreeswitch-dev.lintian-overrides  libfreeswitch1-dbg.lintian-overrides  libfreeswitch1.lintian-overrides  modules.conf  rules
libs/freetdm/src/ftmod/ftmod_libpri/: ftmod_libpri.c
libs/spandsp/: configure.gnu
src/: g711.c  switch_rtp.c  switch_xml.c
src/mod/applications/mod_curl/: Makefile  mod_curl.c
src/mod/applications/mod_hash/: Makefile.am
src/mod/applications/mod_memcache/: Makefile
src/mod/applications/mod_spandsp/: Makefile.am
src/mod/asr_tts/mod_flite/: Makefile  mod_flite.c
src/mod/codecs/mod_bv/: Makefile
src/mod/codecs/mod_codec2/: Makefile
src/mod/codecs/mod_ilbc/: Makefile
src/mod/codecs/mod_speex/: Makefile
src/mod/event_handlers/mod_event_zmq/: Makefile
src/mod/formats/mod_shout/: Makefile  mod_shout.c
src/mod/formats/mod_sndfile/: Makefile
src/mod/languages/mod_lua/: Makefile.am
src/mod/say/mod_say_en/: mod_say_en.c
